# naden

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  cliff.toml  docs.md  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  updates.md  vite.config.ts
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/rules/: code-quality.md  database.md  error-handling.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  update-homebrew-tap.yml
docker/: Dockerfile  compose.yml  entrypoint.sh
landing/: index.html  vite.config.ts
landing/src/: App.tsx  theme.css
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crash_reporting.rs  crash_reporting_tests.rs  error.rs  lib.rs  local_terminal.rs  main.rs  power.rs  tray.rs
src-tauri/src/assistant/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs
src-tauri/src/commands/: assistant_commands.rs  audit_commands.rs  backup_commands.rs  backup_commands_tests.rs  broadcast_commands.rs  discovery_commands.rs  health_commands.rs  key_commands.rs  local_commands.rs  log_commands.rs  mod.rs  playbook_commands.rs  playbook_commands_tests.rs  search_commands.rs  server_commands.rs  session_log_commands.rs  settings_commands.rs  settings_commands_tests.rs  sftp_commands.rs  snippet_commands.rs  ssh_commands.rs  ssh_commands_tests.rs  tunnel_commands.rs  vault_commands.rs  vault_commands_tests.rs
src-tauri/src/db/: mod.rs  queries.rs  queries_tests.rs  tests.rs
src-tauri/src/db/migrations/: 0001_servers.sql  0002_vault_meta.sql  0003_audit_log.sql  0004_settings.sql  0005_favourites.sql  0006_drop_notes.sql  0007_snippets.sql  0008_port_forwards.sql  0009_vault_credentials.sql  0010_playbooks.sql  0011_playbook_steps_index.sql  0012_assistant_chat_archive.sql  0013_ssh_keys.sql  0014_server_initial_dir.sql  0015_broadcast_groups.sql  0016_session_logs.sql  0017_server_hooks_env.sql  0018_server_terminal_theme.sql  0019_servers_vault_credential_unique.sql  0020_server_hooks_confirmation.sql  0021_server_sort_position.sql
src-tauri/src/discovery/: mod.rs  tests.rs
src-tauri/src/models/: audit_entry.rs  log_entry.rs  mod.rs  playbook.rs  port_forward.rs  server.rs  session_log.rs  snippet.rs
src-tauri/src/platform/: biometric.rs  cli_install.rs  macos.rs  mod.rs
src-tauri/src/search/: mod.rs  tests.rs
src-tauri/src/sftp/: archive.rs  live_edit.rs  mod.rs  session.rs  tests.rs  transfer.rs
src-tauri/src/ssh/: config_parser.rs  config_parser_tests.rs  connection.rs  connection_tests.rs  jump_host.rs  known_hosts.rs  known_hosts_tests.rs  launcher.rs  mod.rs
src-tauri/src/tunnel/: dynamic.rs  local.rs  mod.rs  remote.rs  tests.rs
src-tauri/src/vault/: master_password.rs  master_password_tests.rs  mod.rs  tests.rs
src/components/audit/: AuditLogView.tsx
src/components/keys/: AddKeyModal.tsx  GenerateKeyModal.tsx  KeyRow.tsx  KeysView.tsx  ViewPublicKeyModal.tsx
src/components/layout/: AppShell.tsx  ClipboardClearBanner.tsx  CommandPalette.tsx  NewSessionPicker.tsx  SessionRecordingButton.tsx  SessionTabStrip.tsx  Sidebar.tsx  SidebarBroadcastGroupEditModal.tsx  SidebarGroupModals.tsx  SidebarGroupRow.tsx  TopBar.tsx  (+8 more)
src/hooks/: useAppInit.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useTabDragReorder.ts  useTabScrollFade.ts  useTrayEvents.ts  useVaultHeartbeat.ts  useWakeReconnect.ts
src/lib/: accentColor.ts  canvasFonts.ts  checkForUpdates.ts  clipboardClear.ts  destructiveCommands.ts  dragImage.ts  errors.ts  format.ts  formatTime.ts  gridColumns.ts  passwordStrength.ts  path.ts  playbookRunner.ts  playbookVariables.ts  rangeSelect.ts  sentryClient.ts  serverFilter.ts  sessionBuffer.ts  shadowInputBuffer.ts  tauriCommands.ts  terminalSettings.ts  uiFontSettings.ts  useVaultCountdown.ts  vaultActivity.ts
src/store/: assistantStore.ts  broadcastStore.ts  commandHistoryStore.ts  crudActions.ts  healthStore.ts  playbookRunStore.ts  playbookStore.ts  serverStore.ts  sessionLoggingStore.ts  sftpStore.ts  snippetStore.ts  sshKeyStore.ts  terminalStore.ts  terminalToolsStore.ts  tunnelStore.ts  uiStore.ts  vaultStore.ts
src/tests/: broadcastStore.test.ts  checkForUpdates.test.ts  commandHistoryStore.test.ts  destructiveCommands.test.ts  errors.test.ts  format.test.ts  gridColumns.test.ts  passwordStrength.test.ts  path.test.ts  playbookRunner.test.ts  playbookVariables.test.ts  portForwardDraft.test.ts  rangeSelect.test.ts  serverFilter.test.ts  serverStore.reorder.test.ts  shadowInputBuffer.test.ts  terminalSettings.test.ts  terminalStore.test.ts  tunnelPanel.test.ts  tunnelStore.test.ts  uiFontSettings.test.ts  vaultActivity.test.ts  vaultStore.test.ts
src/types/: audit.ts  discovery.ts  local.ts  log.ts  playbook.ts  portForward.ts  server.ts  sessionLog.ts  sftp.ts  snippet.ts  sshKey.ts
(+99 files in other folders)
