[package]
name = "ssh-manager"
version = "0.1.0"
description = "SSH connection manager desktop app"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ssh_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
# Force libssh2 to compile from source linked against vendored OpenSSL rather than
# macOS Secure Transport, giving full OpenSSH key format support (Ed25519, ECDSA,
# and modern RSA keys in "-----BEGIN OPENSSH PRIVATE KEY-----" format).
libssh2-sys = { version = "0.3", features = ["vendored-openssl"] }
ssh2-config = "0"
nucleo = "0"
nucleo-matcher = "0.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = "0.3"
